--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<div class="logo">Veronica Diaz</div>
 				</div>
 				<div class="col-md-4">				
-					<nav class="navbar navbar-inverse">
+					<nav class="navbar v-navbar">
 					  	<ul class="nav nav-pills">
 						  <li role="presentation" class="active"><a href="index.html">About</a></li>
 						  <li role="presentation"><a href="portfolio.html">Portfolio</a></li>
